--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'com.android.application'
+    // Add this line
+    apply plugin: 'io.fabric'
+    apply plugin: 'com.google.firebase.crashlytics'
+    apply plugin: 'com.google.gms.google-services'
+    apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 }
 
 android {
@@ -25,10 +30,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    compileSdkVersion 31
 }
 
 dependencies {
-
+    implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'
+    implementation 'com.github.User:Repo:Tag'
+    implementation platform('com.google.firebase:firebase-bom:28.4.2')
+    implementation "com.jetbrains.kotlin:kotlin-stdlib:1.4.10"
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -36,4 +46,27 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.szagurskii:patternedtextwatcher:0.5.0'
+    testImplementation 'junit:junit:4.12'
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
+
+    // Recommended: Add the Google Analytics SDK.
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
