--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        // Check that you have the following line (if not, add it):
         google()
-        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.1"
+        // Add this line
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    }
+
+    repositories {
+        maven { url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots' }
+    }
+}
+
+allprojects {
+    repositories {
+        // Check that you have the following line (if not, add it):
+
+
     }
 }
 
